--- a/favor-runner/webpack-starter-master 7/app/stylesheets/main.scss
+++ b/favor-runner/webpack-starter-master 7/app/stylesheets/main.scss
@@ -5,5 +5,12 @@ body {
   font-size: 4rem;
   color: $blue;
   background: $white;
+  padding: 2rem;
+}
 
+.intro {
+  background: $lightblue;
+  color: $white;
+  padding: 0.5rem;
+  text-align: center;
 }
