--- a/favor-runner/webpack-starter-master 7/app/stylesheets/main.scss
+++ b/favor-runner/webpack-starter-master 7/app/stylesheets/main.scss
@@ -6,13 +6,22 @@ body {
   color: $blue;
   background: $white;
   padding: 2rem;
+  text-align: center;
 }
 
 .intro {
   background: $lightblue;
   color: $white;
   padding: 0.5rem;
-  text-align: center;
+  border: 5px solid $gray;
+  // border-radius: 5px;
+}
+
+.promo-code {
+  border: 5px solid $gray;
+  .promo-text {
+    font-size: 1.5rem;
+  }
 }
 
 img {
@@ -22,4 +31,8 @@ img {
 
 h5 {
   margin: 1rem;
+}
+
+.disclaimer-text {
+  font-size: 0.5rem;
 }
