--- a/hugo/quickstart/themes/prologue/layouts/index.html
+++ b/hugo/quickstart/themes/prologue/layouts/index.html
@@ -74,13 +74,12 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Dres</strong>, a Front End Developer</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt"> I'm <strong>Andres</strong>.</h2>
+								<p>A Front End Developer in Ausitn, Texas</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Portfolio</a>
 							</footer>
 
 						</div>
@@ -94,10 +93,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>I have experience with HTML, CSS, Javascript, React.js, React Native, jQuery</p>
 
 
               <div class="row">
@@ -106,7 +102,7 @@
                   <article class="item">
                     <a href="{{ .url }}" class="image fit"><img src="{{ .source }}" alt="{{ .alt }}" /></a>
                     <header>
-                      <h3>{{ .title }}</h3>
+                      <h3>TITLE</h3>
                     </header>
                   </article>
                   {{ end }}
